# cercopes

./: .gitignore  Cargo.toml
cercopes_dialog/: Cargo.toml
cercopes_dialog/src/: conversation.rs  expander.rs  goal.rs  lib.rs
cercopes_dialog_test/: Cargo.toml
cercopes_dialog_test/src/: main.rs  test.lua
cercopes_dialog_test/src/character/: feminine.txt  last.txt  masculine.txt  mod.rs
cercopes_dialog_test/src/dialog/: mod.rs
cercopes_dialog_test/src/dialog/greet/: mod.rs
cercopes_dialog_test/src/dialog/small_talk/: fav_music_genre.rs  mod.rs
cercopes_dialog_test/src/frame/: mod.rs
cercopes_dialog_test/src/grammar/: mod.rs
cercopes_dialog_test/src/ontology/: mod.rs
cercopes_folklore/: Cargo.toml
cercopes_folklore/src/: lib.rs
cercopes_knowledge/: Cargo.toml
cercopes_knowledge/src/: lib.rs
cercopes_mlua/: Cargo.toml
cercopes_mlua/src/: lib.rs  registry.rs
cercopes_mlua/src/dialog/: conversation.rs  expander.rs  goal.rs  historical_move.rs  manager.rs  mod.rs
cercopes_mlua/src/knowledge/: evidence.rs  facet_data.rs  mod.rs  model.rs  value_data.rs
cercopes_mlua/src/tests/model/: garbage.lua
